--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,9 @@ name: Build and Deploy
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "master" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "master" ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -24,3 +24,9 @@ jobs:
         run: npm ci
       - name: Install Gatsby CLI
         run: npm install -g gatsby-cli@2.12.34
+     
+      - name: Build
+        run: gatsby build
+      
+      - name: Verify build
+        run: ls -la public
