--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,3 +30,18 @@ jobs:
       
       - name: Verify build
         run: ls -la public
+     
+      - name: Copy and deploy
+        uses: mdallasanta/ssh-scp-deploy@v1.2.0
+        with:
+          local: 'public'                                                  # Local file path - REQUIRED false - DEFAULT ./
+          remote: '/home/azureuser/'                                                 # Remote file path - REQUIRED false - DEFAULT ~/
+          host: ${{secrets.REMOTE_HOST}}                                      # Remote server address - REQUIRED true
+          port: ${{secrets.PORT}}                                      # Remote server port - REQUIRED false - DEFAULT 22
+          user: ${{secrets.REMOTE_USER}}                                      # Remote server user - REQUIRED true
+          #password: ${{secrets.PASSWORD}}                              # User password - REQUIRED at least one of "password" or "key" 
+          key: ${{secrets.SERVER_SSH_KEY}}                                        # Remote server private key - REQUIRED at least one of "password" or "key" 
+          pre_upload: echo "Copy over"  # Command to run via ssh before scp upload - REQUIRED false
+          post_upload: sudo mv public/* /var/www/html/  # Command to run via ssh after scp upload - REQUIRED false
+          ssh_options: -o StrictHostKeyChecking=no                     # A set of ssh_option separated by -o - REQUIRED false - DEFAULT -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null
+          scp_options: -v
