--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,5 +25,9 @@ jobs:
       - name: Install Gatsby CLI
         run: npm install -g gatsby-cli@2.12.34
      
-      - name: List files
-        run: ls
+      - name: Build
+        run: gatsby build
+      
+      - name: Verify build
+        run: ls -la public
+     
