--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,13 +20,13 @@ jobs:
       - name: Install Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: '16'
+          node-version: '16.x'
 
       - name: Install Project Dependencies
         run: npm ci
 
       - name: Install Gatsby CLI
-        run: npm install -g gatsby-cli@2.12.34
+        run: npm install -g gatsby-cli
      
       - name: NPM install
         run: npm install
