--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ on:
   workflow_dispatch:
     
 jobs:
-  build-and-deploy:
+  build:
     name: Build and deploy Gatsby site
     runs-on: ubuntu-latest
     steps:
@@ -39,3 +39,28 @@ jobs:
         with:
           name: public-package
           path: public
+
+  deploy:
+    - name: Copy and deploy
+      runs-on: ubuntu-latest
+      needs: build
+      steps:
+        - name: Download
+          uses: actions/download-artifcat@v3
+          with:
+            name: public-package
+            path: public
+        - name: copy public to ubuntu
+          uses: mdallasanta/ssh-scp-deploy@v1.2.0
+          with:
+            local: 'public'                                                  # Local file path - REQUIRED false - DEFAULT ./
+            remote: '/home/azureuser/'                                                 # Remote file path - REQUIRED false - DEFAULT ~/
+            host: ${{secrets.REMOTE_HOST}}                                      # Remote server address - REQUIRED true
+            #port: ${{secrets.PORT}}                                      # Remote server port - REQUIRED false - DEFAULT 22
+            user: ${{secrets.REMOTE_USER}}                                      # Remote server user - REQUIRED true
+            #password: ${{secrets.PASSWORD}}                              # User password - REQUIRED at least one of "password" or "key" 
+            key: ${{secrets.SERVER_SSH_KEY}}                                        # Remote server private key - REQUIRED at least one of "password" or "key" 
+            pre_upload: sudo rm -rf /var/www/html/*  # Command to run via ssh before scp upload - REQUIRED false
+            post_upload: sudo mv public/* /var/www/html/  # Command to run via ssh after scp upload - REQUIRED false
+            ssh_options: -o StrictHostKeyChecking=no                     # A set of ssh_option separated by -o - REQUIRED false - DEFAULT -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null
+            scp_options: -v    
