--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,7 +41,7 @@ jobs:
           path: public
 
   deploy:
-    - name: Copy and deploy
+      name: Copy and deploy
       runs-on: ubuntu-latest
       needs: build
       steps:
