--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,15 +44,16 @@ jobs:
           path: public
 
   deploy:
-      name: Copy and deploy
+      name: Deploy
       runs-on: ubuntu-latest
       needs: build
       steps:
         - name: Download
-          uses: actions/download-artifcat@v3
+          uses: actions/download-artifact@v3
           with:
             name: public-package
             path: public
+            
         - name: copy public to ubuntu
           uses: mdallasanta/ssh-scp-deploy@v1.2.0
           with:
