--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,7 @@ jobs:
   test:
     name: Test npm audit
     runs-on: ubuntu-latest
-    needs: test
+    needs: build
     steps:
       - name: Download
         uses: actions/download-artifact@v3
