--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,7 @@ jobs:
           name: public-package
           path: public
   
-  test:
+  npm-audit:
     name: Test npm audit
     runs-on: ubuntu-latest
     needs: build
@@ -54,13 +54,16 @@ jobs:
           name: public-package
           path: public
       
-      - name: Audit
-        run: npm audit
+      - name: Checkout Code
+        uses: actions/checkout@v3
+
+      - name: Security Component Scanning
+        run: npm audit --json > npm-audit-result.json
 
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
-    needs: build
+    needs: npm-audit
     steps:
       - name: Download
         uses: actions/download-artifact@v3
