--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,7 @@ jobs:
           path: public
   
   npm-audit:
-    name: Test npm audit
+    name: Npm-audit
     runs-on: ubuntu-latest
     needs: build
     steps:
@@ -56,6 +56,12 @@ jobs:
       
       - name: Checkout Code
         uses: actions/checkout@v3
+
+      - name: Install Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+          cache: 'npm'
 
       - name: Security Component Scanning
         run: npm audit --json > npm-audit-result.json
