--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,7 +67,7 @@ jobs:
         run: npm install
 
       - name: Security Component Scanning
-        run: npm audit --json
+        run: npm audit --json > npm-audit-result.json
 
   deploy:
     name: Deploy
