--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,6 +57,12 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
+      - name: Install Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+          cache: 'npm'
+
       - name: Install  Dependencies
         run: npm install
 
@@ -68,7 +74,7 @@ jobs:
         run: ls -la
 
       - name: Archive the npm aduit results output json file
-        uses: actions/upload-artifacts@v3
+        uses: actions/upload-artifact@v3
         with:
           name: NPM Audit Output JSON File
           path: npm-audit-result.json
