--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 16
-          #cache: 'npm'
+          cache: 'node_modules'
 
       - name: Install gatsby cli
         run: npm install --location=global gatsby-cli
@@ -56,12 +56,6 @@ jobs:
       
       - name: Checkout Code
         uses: actions/checkout@v3
-
-      - name: Install Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 16
-          cache: 'npm'
 
       - name: Install  Dependencies
         run: npm install
